minijinja/tests/snapshots/test_parser__parser@block.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "<title>{% block title %}{% endblock %}</title>\n{% block body %}\n    foo\n{% endblock body %}"
input_file: minijinja/tests/parser-inputs/block.txt
---
Ok(
    Template {
        children: [
            EmitRaw {
                raw: "<title>",
            } @ 1:0-1:7,
            Block {
                name: "title",
                required: false,
                body: [],
            } @ 1:10-1:35,
            EmitRaw {
                raw: "</title>\n",
            } @ 1:38-2:0,
            Block {
                name: "body",
                required: false,
                body: [
                    EmitRaw {
                        raw: "\n    foo\n",
                    } @ 2:16-4:0,
                ],
            } @ 2:3-4:16,
        ],
    } @ 0:0-4:19,
)
