minijinja/tests/snapshots/test_parser__parser@block_required.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{% block body required %}\n  {# comment #}\n{% endblock %}\n{% block sidebar scoped required %}{% endblock %}"
input_file: minijinja/tests/parser-inputs/block_required.txt
---
Ok(
    Template {
        children: [
            Block {
                name: "body",
                required: true,
                body: [
                    EmitRaw {
                        raw: "\n  ",
                    } @ 1:25-2:2,
                    EmitRaw {
                        raw: "\n",
                    } @ 2:15-3:0,
                ],
            } @ 1:3-3:11,
            EmitRaw {
                raw: "\n",
            } @ 3:14-4:0,
            Block {
                name: "sidebar",
                required: true,
                body: [],
            } @ 4:3-4:46,
        ],
    } @ 0:0-4:49,
)
