minijinja/tests/snapshots/test_parser__parser@err_binop_missing_rhs.txt.snap
---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/err_binop_missing_rhs.txt

---
Err(
    Error {
        kind: SyntaxError,
        detail: Some(
            "unexpected end of variable block",
        ),
        name: Some(
            "err_binop_missing_rhs.txt",
        ),
        lineno: 1,
        source: None,
    },
)
